--- a/project/styles.css
+++ b/project/styles.css
@@ -28,8 +28,13 @@
     text-align: center;
     padding: 3rem 1rem;
     background-color: #eee;
+    background-image: image("../");
   }
   
+  body {
+    background-image: url("paper.gif");
+    background-color: #cccccc;
+   }
   .hero h2 {
     margin-bottom: 1rem;
   }
@@ -64,11 +69,7 @@
     gap: 1rem;
   }
   
-  .image-placeholder {
-    width: 150px;
-    height: 150px;
-    background-color: #ccc;
-  }
+
   
   .hobbies {
     margin-top: 2rem;
