--- a/project/styles.css
+++ b/project/styles.css
@@ -98,33 +98,45 @@ nav a:hover {
   object-fit: cover;
 }
 
+.photo-gallery{
+  display: flex;
+  flex-direction: row; 
+  flex-wrap: wrap;   
+  justify-content: center;
+  justify-content: space-around;
+  padding-top: 10px;
+}
+
 .photo-grid {
   display: grid;
-  grid-template-columns: repeat(2, 1fr);
+  grid-template-columns: repeat(auto-fit, minmax(300px, 1fr));
   gap: 1.5rem;
   margin-top: 2rem;
+  padding-top: 10px;
 }
 
 .photo-card {
   position: relative;
+  height: 300px; /* fixed height so all carousels are uniform */
   border-radius: 12px;
   overflow: hidden;
   border: 1px solid #ddd;
   background-color: #fff;
+  max-width: 200px;
 }
 
 .carousel {
   display: flex;
+  height: 100%;
+  width: 100%;
   overflow-x: auto;
   scroll-snap-type: x mandatory;
   scroll-behavior: smooth;
-  max-width: 300px;
-  margin: 0 auto;
 }
 
 .carousel img {
   width: 100%;
-  height: auto;
+  height: 100%;
   object-fit: cover;
   flex-shrink: 0;
   scroll-snap-align: center;
@@ -165,6 +177,7 @@ nav a:hover {
   bottom: 10px;
   right: 10px;
 }
+
 
 footer {
   background-color: #333;
